--- a/index.html
+++ b/index.html
@@ -52,18 +52,18 @@
       var abundance = parseFloat(document.getElementById('abundance').value);
       var carbonPrice = parseFloat(document.getElementById('carbonPrice').value);
        
-      var biomassPerTree = 0.2901 * Math.pow(diameter, 2.2605);
-      var biomassPerHectare = biomassPerTree * abundance;
+      var biomassPerTree = 0.2064 * Math.pow(diameter, 2.34);
+      var biomassPerHectare = biomassPerTree * abundance*area;
       var stockCarbonPerHectare = biomassPerHectare * 0.47 * abundance;
       var emisionPerHectare = stockCarbonPerHectare * 3.67;
       var carbonValue = emisionPerHectare * carbonPrice;
        
       document.getElementById('results').innerHTML =
-         'Biomass Per Tree: ' + biomassPerTree.toFixed(2) + ' kg<br>' +
-         'Biomass Per Hectare: ' + biomassPerHectare.toFixed(2) + ' kg<br>' +
-         'Stock Carbon Per Hectare: ' + stockCarbonPerHectare.toFixed(2) + ' kg<br>' +
-         'Emission Per Hectare: ' + emisionPerHectare.toFixed(2) + ' kg<br>' +
-         'Carbon Value Per Hectare: $' + carbonValue.toFixed(2);
+         'Biomass (Tree): ' + biomassPerTree.toFixed(2) + ' Kg<br>' +
+         'Biomass (Hectare): ' + biomassPerHectare.toFixed(2) + ' Kg<br>' +
+         'Stock Carbon (Hectare): ' + stockCarbonPerHectare.toFixed(2) + ' Kg CO₂<br>' +
+         'Emission (Hectare): ' + emisionPerHectare.toFixed(2) + ' Kg CO₂<br>' +
+         'Carbon Value (Hectare): $' + carbonValue.toFixed(2);
      });</script>
   
   </body></html>
